# david

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Paths.cmake  README.md  bitbucket-pipelines.yml  cmake.sh  info.sh  roadmap-v1.0.0.md  update.sh
benchmarks/: CMakeLists.txt  charToInt.cpp  main.cpp  test.cpp
cmake/: Paths.cmake  README.md
doc/: README.md  evaluation.md  stats_3_64_113_1.txt  stats_4_64_113_40_1.txt  stats_4_64_300_40_1.txt  stats_5_64_300_40_12_1.txt  stats_5_71_200_40_12_1.txt  stats_only_3_64_113_1.csv  stats_only_3_64_113_1.txt  stats_only_4_64_113_40_1.csv  stats_only_4_64_113_40_1.txt  stats_only_4_64_300_40_1.csv  stats_only_4_64_300_40_1.txt  stats_only_5_64_300_40_12_1.txt  stats_only_5_71_200_40_12_1.csv
docs/html/: ANN_8h_source.html  ChessEngine_8h_source.html  EngineMaster_8h_source.html  MACROS_8h_source.html  MoveGenTest_8h_source.html  MoveGen_8h_source.html  Search_8h_source.html  TreeGen_8h_source.html  annotated.html  binaryInputs_8h_source.html  bitboard_8h_source.html  classdavid_1_1ANN-members.html  classdavid_1_1ANN.html  classdavid_1_1ChessEngine-members.html  classdavid_1_1ChessEngine.html  classdavid_1_1EngineMaster-members.html  classdavid_1_1EngineMaster.html  classdavid_1_1MoveGen-members.html  classdavid_1_1MoveGen.html  classdavid_1_1Search-members.html  classdavid_1_1Search.html  classdavid_1_1gameTree_1_1TreeGen-members.html  classdavid_1_1gameTree_1_1TreeGen.html  classes.html  david_8h_source.html  deprecated.html  dir_3d9126aa00c041bc0b8f859d1965a0f4.html  dir_40770f05955a81fdce09a90b20723d5a.html  (+46 more)
engine/: CMakeLists.txt
engine/ANNTraining/: CMakeLists.txt  Stockfish_src  main.cpp
engine/ANNTraining/binaryNetwork/: binaryInputs.cpp  binaryNetworkTrainingFile.txt.REMOVED.git-id  save_fixed.net  save_float.net
engine/ANNTraining/binaryNetwork/tmp/: README.md
engine/ANNTraining/intNetwork/: intInputs.cpp  save_fixed.net  save_float.net
engine/ANNTraining/trainingdata/: BUFFER_fenAndStockfishScore.data  generateTrainingDataFromPGNFiles.py
engine/ANNTraining/trainingdata/output/: xor_fixed.data
engine/benchmarks/: CMakeLists.txt  charToInt.cpp  countSetBits.cpp  flipbit.cpp  include.h  intReference.cpp  intTypesInLoops.cpp  loopBitArray.cpp  reuseOfClassInstance.cpp  test.cpp  vectorGeneration.cpp
engine/include/chess_ann/: ChessEngine.h  Context.h  Engine.h  EngineContext.h  EngineMaster.h  GameTree.h  Search.h  bitboard.h  chess_ann.h  definitions.h  engineInformation.h  environment.h  evaluate.h  genericUCIResponses.h  search.h  stockfish_wrapper.h  utils.h  variables.h
engine/include/chess_ann/ANN/: ANN.h  ann.h  binaryInputs.h  intInputs.h
engine/include/chess_ann/forwards/: EngineContext.h  Search.h
engine/include/chess_ann/uci/: Definitions.h  Listener.h  Parser.h  Response.h
engine/include/david/: BitboardsNode.h  Board.h  ChessEngine.h  EngineContext.h  EngineMaster.h  GameTree.h  MACROS.h  Move.h  MoveGen.h  MoveGen.h.gch  MoveGen2.h  MoveGenTest.h  MoveGeneration.h  ScoreNode.h  Search.h  TreeGen.h  bitboard.h  david.h  definitions.h  engineInformation.h  environment.h  genericUCIResponses.h  log.h  scoreNode.h  types.h  utils.h  variables.h
engine/include/david/ANN/: ANN.h  binaryInputs.h  intInputs.h
engine/include/david/forwards/: EngineContext.h  README.md  Search.h
engine/include/david/forwards/uci/: Listener.h  Parser.h  uci.h
engine/include/david/uci/: Listener.h  Parser.h  Response.h  definitions.h  events.h
engine/include/david/utils/: gameState.h  logger.h  neuralNet.h  utils.h
engine/spike/: BitboardsNode.cpp  BitboardsNode.h  EngineContext.cpp  EngineContext.h  EngineMaster.cpp.old  EngineMaster.h.old  MoveGen-A1.h  MoveGen.cpp  MoveGenCPUCacheImprovement.cpp  MoveGeneration.cpp  README.md  ScoreNode.cpp  ScoreNode.h  bitboard.h  environment.cpp  environment.h  evaluate.cpp  moveGenTests.cpp  movegenerationTest.cpp  search.cpp  search.h  vectorGeneration.cpp
engine/src/: BitboardsNode.cpp  CMakeLists.txt  ChessEngine.cpp  Context.cpp  Engine.cpp  EngineContext.cpp  EngineMaster.cpp  GameTree.cpp  MoveGeneration.cpp  README.md  ScoreNode.cpp  Search.cpp  Search.h  TestExample.cpp  TreeGen.cpp  environment.cpp  gameTree.cpp  gameTree.h  main.cpp  stockfish_evaluation.cpp  utils.cpp
engine/src/ANN/: ANN.cpp  ann.cpp  neuralNetwork.cpp
engine/src/ANN/networks/: README.md  fixed_binaryNetworkTrainingFile_5_71_1_1494410133.net  fixed_binaryNetworkTrainingFile_6_83_1_1497360313.net  float_ANNFile_6_83_1_1497360313.net  float_binaryNetworkTrainingFile_5_71_1_1494410133.net
engine/src/david/: ChessEngine.cpp  EngineContext.cpp  EngineMaster.cpp  MoveGen.cpp  MoveGenTest.cpp  MoveGeneration.cpp  Search.cpp  TreeGen.cpp  environment.cpp
engine/src/uci/: Listener.cpp  Listener.h  Parser.cpp  Response.cpp
engine/src/utils/: gameState.cpp  menc.cpp  neuralNet.cpp  utils.cpp
engine/src_debug/: CMakeLists.txt
engine/src_development/: CMakeLists.txt
engine/tests/: CMakeLists.txt  moveGenTests.cpp  movegenerationTest.cpp  test-MoveGen.cpp  test-TreeGen.cpp  test-search.cpp  test-utils.cpp  tests-GameTree.cpp  tests-UCIHandler.cpp  tests-UCIListener.cpp  tests-main.cpp
include/: README.md  TestExample.h  UCIListener.h  ann.h  commands_in.h  evaluate.h  interpreter.h  search.h  variables.h
lib/: README.md
spike/: evaluate.cpp  negamaxWithAlphaBetaPruning.cpp
src/: BitboardsNode.cpp  BitboardsNode.h  CMakeLists.txt  ScoreNode.h  Search.h  TestExample.cpp  ann.cpp  bitboard.h  enviornment.cpp  enviornment.h  environment.cpp  environment.h  evaluate.cpp  genericUCIResponses.cpp  genericUCIResponses.h  main.cpp  search.cpp  stockfish_evaluation.cpp
src/ANN/: ann.cpp
src/lib/fann/: fann.pc
src/uci/: Listener.cpp  Listener.h  Parser.h  Response.cpp  Response.h  UCIEvent.h  UCIHandler.cpp  UCIHandler.h  UCIListener.cpp  UCIListener.h  commands_in.cpp  interpreter.cpp  listener.cpp
tests/: CMakeLists.txt  README.md  catch.h  material-test.cpp  moveGenTests.cpp  tests-UCIHandler.cpp  tests-UCIListener.cpp  tests-example.cpp  tests-main.cpp  utils.cpp
(+77 files in other folders)
